--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -18,8 +18,17 @@ jobs:
         with:
           terraform_version: 1.7.1  # Ajuste para a versão desejada
 
+      - name: Debug Secrets
+        run: |
+          echo "AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}"
+          echo "AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}"
+
       - name: Login no Azure
-        run: az login --service-principal -u ${{ secrets.AZURE_CLIENT_ID }} -p ${{ secrets.AZURE_CLIENT_SECRET }} --tenant ${{ secrets.AZURE_TENANT_ID }}
+        run: |
+          az login --service-principal \
+            --username "${{ secrets.AZURE_CLIENT_ID }}" \
+            --password "${{ secrets.AZURE_CLIENT_SECRET }}" \
+            --tenant "${{ secrets.AZURE_TENANT_ID }}"
 
       - name: Set Environment Variables
         run: |
