--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -18,30 +18,11 @@ jobs:
         with:
           terraform_version: 1.7.1  # Ajuste para a versão desejada
 
-      - name: Debug Secrets
-        run: |
-          echo "AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}"
-          echo "AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}"
-
-      - name: Login no Azure
-        run: |
-          az login --service-principal \
-            --username "${{ secrets.AZURE_CLIENT_ID }}" \
-            --password "${{ secrets.AZURE_CLIENT_SECRET }}" \
-            --tenant "${{ secrets.AZURE_TENANT_ID }}"
-
-      - name: Set Environment Variables
-        run: |
-          echo "ARM_CLIENT_ID=${{ secrets.AZURE_CLIENT_ID }}" >> $GITHUB_ENV
-          echo "ARM_CLIENT_SECRET=${{ secrets.AZURE_CLIENT_SECRET }}" >> $GITHUB_ENV
-          echo "ARM_TENANT_ID=${{ secrets.AZURE_TENANT_ID }}" >> $GITHUB_ENV
-          echo "ARM_SUBSCRIPTION_ID=${{ secrets.AZURE_SUBSCRIPTION_ID }}" >> $GITHUB_ENV
-
       - name: Terraform Init
         run: terraform init
 
       - name: Terraform Plan
         run: terraform plan
 
-      - name: Terraform Apply (com timeout)
-        run: timeout 30m terraform apply -auto-approve
+      - name: Terraform Apply
+        run: terraform apply -auto-approve
